# ipfS3

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE.md  README.md  ROADMAP.md  config.docker.toml  config.example.toml  docker-compose.yml
.github/workflows/: ci.yml  docker.yml
docs/: client-compatibility.md  ipfs-s3-feasibility-research.md  kubo-s3-feasibility-report.md
docs/research/: s3-ipfs-gateway-feasibility.md
docs/superpowers/plans/: 2026-07-02-ipfs-s3-gateway.md  2026-07-07-decompress-zip-upload.md  2026-07-07-rclone-compatibility-fixes.md  2026-07-19-client-compatibility.md  2026-07-20-docker-client-rust-s3-tests.md  2026-07-20-v0.3-hardening.md
docs/superpowers/specs/: 2026-07-02-ipfs-s3-gateway-design.md  2026-07-07-decompress-zip-upload-design.md  2026-07-19-client-compatibility-design.md  2026-07-20-docker-client-rust-s3-test-design.md  2026-07-20-v0.3-hardening-design.md
ipfs/: Dockerfile  entrypoint.sh
scripts/: client-smoke.ps1
src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  state.rs
src/crypto/: aes_gcm.rs  chunker.rs  key.rs  mod.rs
src/kubo/: add.rs  cat.rs  client.rs  mod.rs  pin.rs
src/pinning/: mod.rs  noop.rs
src/s3/: handler.rs  http.rs  mod.rs  query.rs
src/s3/ops/: bucket.rs  multipart.rs  object.rs
src/s3/route/: decompress_zip.rs  mod.rs
src/store/: bucket.rs  mod.rs  multipart.rs  object.rs
src/store/entities/: bucket.rs  mod.rs  multipart_part.rs  multipart_upload.rs  object.rs
src/zip/: extract.rs  local_header.rs  mod.rs  response.rs  sanitize.rs
tests/: client-smoke.Tests.ps1  e2e.rs  integration.rs
tests/support/: decompress.rs  mod.rs  sigv4.rs
(+4 files in other folders)
